--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ html {
 
 body {
     min-width: 320px;
-    padding: 5rem 3rem;
+    padding: 5rem 21.5rem;
 
     li {
         padding-left: 1rem;
@@ -64,6 +64,8 @@ body {
     
     main {
         background-color: var(--white);
+
+        width: fit-content;
         
         border-radius: 20px;
 
@@ -71,6 +73,8 @@ body {
         
         img {
             border-radius: 20px;
+            width: 50vw;
+            height: auto;
             margin-bottom: 1rem;
         }
     }
